--- a/MedLocate/app/src/main/res/layout/activity_signup.xml
+++ b/MedLocate/app/src/main/res/layout/activity_signup.xml
@@ -4,6 +4,134 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignupActivity">
+    tools:context=".SignupActivity"
+    android:background="#F8EFEF">
+
+    <ImageView
+        android:id="@+id/signupdesigntop"
+        android:layout_width="match_parent"
+        android:layout_height="176dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/loginpage" />
+
+    <TextView
+        android:id="@+id/signup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:shadowColor="#40000000"
+        android:shadowDx="0"
+        android:shadowDy="4"
+        android:shadowRadius="4"
+        android:text="SignUp"
+        android:textAlignment="center"
+        android:textColor="#BF000000"
+        android:textSize="45sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signupdesigntop" />
+
+    <EditText
+        android:id="@+id/signupusername"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:background="#90B285ED"
+        android:enabled="true"
+        android:hint="Username"
+        android:shadowColor="#40000000"
+        android:shadowDx="0"
+        android:shadowDy="4"
+        android:shadowRadius="4"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signup"
+        android:layout_marginTop="20dp"/>
+
+    <EditText
+        android:id="@+id/signupemail"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:background="#90B285ED"
+        android:enabled="true"
+        android:hint="Email"
+        android:shadowColor="#40000000"
+        android:shadowDx="0"
+        android:shadowDy="4"
+        android:shadowRadius="4"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signupusername"
+        android:layout_marginTop="20dp"/>
+
+    <EditText
+        android:id="@+id/signuppassword"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:background="#90B285ED"
+        android:enabled="true"
+        android:hint="Password"
+        android:inputType="text|textPassword"
+        android:shadowColor="#40000000"
+        android:shadowDx="0"
+        android:shadowDy="4"
+        android:shadowRadius="4"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signupemail"
+        android:layout_marginTop="20dp"/>
+
+    <EditText
+        android:id="@+id/signupconfirmpassword"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:background="#90B285ED"
+        android:enabled="true"
+        android:hint="Confirm Password"
+        android:inputType="text|textPassword"
+        android:shadowColor="#40000000"
+        android:shadowDx="0"
+        android:shadowDy="4"
+        android:shadowRadius="4"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signuppassword"
+        android:layout_marginTop="20dp"/>
+
+    <Button
+        android:id="@+id/signupbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:text="Submit"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:backgroundTint="#B285ED"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signupconfirmpassword"
+        android:layout_marginTop="10dp"/>
+
+    <TextView
+        android:id="@+id/signupdesignbottom"
+        android:layout_width="match_parent"
+        android:layout_height="196dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/loginpagebottom" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
